# NaturalSelection

./: .gitignore  CMakeLists.txt  NaturalEvolution.cpp  README.md  SmartEvolution.cpp  main.cpp
config/: Application.json
src/Action/api/: IAction.hpp  IActionFactory.hpp
src/Action/inc/: Color.hpp  Movement.hpp  Test.hpp
src/Brain/api/: IBrain.hpp  IBrainProxy.hpp
src/Brain/inc/: Brain.hpp  BrainProxy.hpp  GenePool.hpp  Neuron.hpp
src/Brain/src/: Brain.cpp  BrainProxy.cpp
src/Common/api/: CommonTypes.hpp  IEntityFactory.hpp  IUnit.hpp
src/Common/inc/: Benchmark.hpp  Common.hpp  CommonTypes.hpp  ConfigParser.hpp  Entity.hpp  EntityFactory.hpp  Logger.hpp  Utility.hpp
src/Common/src/: ConfigParser.cpp  EntityFactory.cpp  Logger.cpp  Utility.cpp
src/Entity/api/: IEntity.hpp
src/Entity/inc/: CognitiveEntity.hpp  Entity.hpp  EntityMap.hpp  NonCognitiveEntity.hpp  Organism.hpp
src/Entity/src/: Entity.cpp
src/Logger/inc/: ConfigParser.hpp  Logger.hpp
src/Logger/src/: ConfigParser.cpp  Logger.cpp
src/Manager/api/: IPlatform.hpp
src/Manager/inc/: Grid.hpp  Manager.hpp  PlatformHandler.hpp  QuadTree.hpp
src/Manager/src/: Grid.cpp  Manager.cpp
src/Organism/api/: IOrganismFactory.hpp
src/Organism/inc/: Organism.hpp  OrganismFactory.hpp
src/Organism/src/: OrganismFactory.cpp
src/PointOfInterest/api/: IPointOfInterestProxy.hpp
src/PointOfInterest/inc/: Boundry.hpp
src/PointOfInterest/src/: Boundry.cpp
